[project]
name = "mal0-cogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.5.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.9.5",
    "aiohttp-json-rpc>=0.13.3",
    "aiomysql>=0.2.0",
    "aiosignal>=1.3.1",
    "apsw>=3.46.1.0",
    "argcomplete>=3.6.2",
    "async-timeout>=4.0.3",
    "attrs>=25.3.0",
    "aubio>=0.4.9",
    "babel>=2.17.0",
    "brotli>=1.1.0",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "contextlib2>=21.6.0",
    "cryptography>=45.0.6",
    "decorator>=5.2.1",
    "deprecated>=1.2.18",
    "discord>=2.3.2",
    "discord-py>=2.5.2",
    "dnspython>=2.7.0",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "frozenlist>=1.5.0",
    "future>=1.0.0",
    "greenlet>=3.2.3",
    "httplint>=2025.4.1",
    "idna>=3.10",
    "importlib-metadata>=8.5.0",
    "importlib-resources>=6.5.2",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "multidict>=6.1.0",
    "mutagen>=1.47.0",
    "netaddr>=1.3.0",
    "numpy>=2.3.2",
    "orjson>=3.10.15",
    "packaging>=25.0",
    "pip>=25.2",
    "pipx>=1.7.1",
    "platformdirs>=4.3.6",
    "propcache>=0.2.0",
    "psutil>=7.0.0",
    "pycares>=4.10.0",
    "pycparser>=2.22",
    "pydub>=0.25.1",
    "pygithub>=2.7.0",
    "pygments>=2.19.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pynacl>=1.5.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.9.7",
    "red-commons>=1.0.0",
    "red-discordbot>=3.5.20",
    "red-lavalink>=0.11.0",
    "redbot>=2.0.15",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "schema>=0.7.7",
    "six>=1.17.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.42",
    "thor>=0.11.12",
    "tomlkit>=0.13.3",
    "typing-extensions>=4.13.2",
    "urllib3>=2.5.0",
    "userpath>=1.9.2",
    "validators>=0.35.0",
    "wrapt>=1.17.2",
    "yarl>=1.15.2",
    "zipp>=3.20.2",
    "zstandard>=0.23.0",
]
